# jiaoluo

./: .gitignore  CMakeLists.txt  README_QT.md
resources/: resources.qrc
src/: main.cpp
src/app/: app_state.cpp  app_state.h  application_controller.cpp  application_controller.h
src/ui/: difficulty_select_page.cpp  difficulty_select_page.h  game_page.cpp  game_page.h  home_page.cpp  home_page.h  landing_page.cpp  landing_page.h  main_window.cpp  main_window.h  result_dialog.cpp  result_dialog.h
